3dprint/apps-of-apps/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octoprint
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: octoprint
      app.kubernetes.io/part-of: octoprint
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: octoprint
        app.kubernetes.io/instance: octoprint
        app.kubernetes.io/component: octoprint
        app.kubernetes.io/part-of: octoprint
    spec:
      nodeSelector:
        dedicated: 3dprinter
      tolerations:
        - key: "dedicated"
          value: "3dprinter"
          effect: "NoSchedule"
      containers:
      - name: octoprint
        image: octoprint/octoprint:latest
        securityContext:
          privileged: true
        resources:
          requests:
            memory: 200Mi
            cpu: 100m
          limits:
            memory: 350Mi
            cpu: 200m
        volumeMounts: []
      volumes:
      - name: octoprint
        persistentVolumeClaim:
          claimName: octoprint
